# SM-code-generator

./: .gitignore  CLAUDE.md  Makefile  compileRun  first.yaml  install.sh  main.rs  manual.tex  nested-first.yaml  nested-second.yaml  paralell.yaml  pyproject.toml  sm-compiler.py  sm_compiler.py  test-rust.yaml  third.yaml  transition-verification.smb  transition-verification.yaml  verify.sh
codegen/: base_lang.py  c_lang.py  common.py  python_lang.py  rust_lang.py
tests/: test_integration.py
tests/fixtures/: .timer-test.smb.swp  dashed-names.expect  dashed-names.py  dashed-names.smb  self-transition-python.expect  self-transition-python.py  self-transition-python.smb  timer-test.expect  timer-test.py  timer-test.smb  transition-verification-c.c  transition-verification-c.expect  transition-verification-c.smb  transition-verification-python.expect  transition-verification-python.smb  transition-verification-rust.expect  transition-verification-rust.smb
