[project]
name = "smbuilder"
version = "0.2.1"
description = "Generate code to run statemachine defined in .smb files"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
sm-compiler = "sm_compiler:main"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["sm_compiler"]
packages = ["codegen"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
